# bili-live-notify-bot

./: Cargo.toml  Makefile  draft.md  setup-dev.sh
migrations/: 20220613053901_initialize.up.sql  20220706082204_initialize.down.sql  20220706082204_initialize.up.sql
migrations/2022-06-15-100859_initialize/: up.sql
migrations/postgresql/20220613-1046-initialize/: down.sql
src/: config.rs  db.rs  lib.rs  models.rs  response_type.rs  schema.rs  scraper.rs  task.rs
tests/: live_room_test.rs  scraper_test.rs  test-db.sh
