[package]
name = "bili-live-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = "1.18.2"
url = { version = "2.2.2", features = ["serde"] }
