[package]
name = "bili-live-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
reqwest = {version = "0.11.10", features = ["json"]}
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"]}
url = { version = "2.2.2", features = ["serde"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "postgres", "migrate", "time" ] }
async-trait = "0.1.56"
thiserror = "1.0.31"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = [ "postgres" ]}

[dev-dependencies]
lazy_static = "1.4.0"
